# ada-2023-project-thedatafreaks

./: .gitignore  README.md  data_exploration.ipynb  pyproject.toml  requirements.txt  user_talk_interactions.py
ada2023/: utils.py
notebooks/: Communities.ipynb  Edits.ipynb  data_exploration.ipynb  main_notebook.ipynb  main_notebook.py  main_notebook_v1.py  main_notebook_v2.py
scripts/: user_edit_interactions.py  user_talk_interactions.py
